--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>React+Webpack</h1>
 
-  <script src="/assets/app.bundle.js"></script>
+  <script src="/assets/bundle.js"></script>
 </body>
 </html>
